--- a/PXEngine/PXEngine.vcxproj
+++ b/PXEngine/PXEngine.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="src\PxeFSHelpers.cpp" />
     <ClCompile Include="src\PxeIndexBuffer.cpp" />
     <ClCompile Include="src\PxeRenderMaterial.cpp" />
+    <ClCompile Include="src\PxeRenderTexture.cpp" />
     <ClCompile Include="src\PxeTexture.cpp" />
     <ClCompile Include="src\PxeVertexArray.cpp" />
     <ClCompile Include="src\PxeVertexBuffer.cpp" />
@@ -212,6 +213,7 @@
     <ClInclude Include="include\PxeRenderElement.h" />
     <ClInclude Include="include\PxeRenderMaterial.h" />
     <ClInclude Include="include\PxeRenderObject.h" />
+    <ClInclude Include="include\PxeRenderTexture.h" />
     <ClInclude Include="include\PxeTexture.h" />
     <ClInclude Include="include\PxeRingBuffer.h" />
     <ClInclude Include="include\PxeTypes.h" />
