--- a/PXEngineSamples/PXEngineSamples.vcxproj
+++ b/PXEngineSamples/PXEngineSamples.vcxproj
@@ -30,8 +30,8 @@
     <ClInclude Include="src\LogHandler.h" />
     <ClInclude Include="src\TestApplication.h" />
     <ClInclude Include="src\TestAsset.h" />
+    <ClInclude Include="src\TestGuiElement.h" />
     <ClInclude Include="src\TestRenderObject.h" />
-    <ClInclude Include="src\TestTextureRenderObject.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
