--- a/PXEngineSamples/PXEngineSamples.vcxproj.filters
+++ b/PXEngineSamples/PXEngineSamples.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\scenes\MarchingCubes\MarchingCubesLookupTable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="assets\shaders\test.pxeshader" />
@@ -45,6 +48,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\scenes\CubeStack\PhysicsCube.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scenes\MarchingCubes\MarchingCubes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scenes\MarchingCubes\MarchingCubesLookupTable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scenes\MarchingCubes\MarchingMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
